src/main/resources/Krakatau-master/tests/assembler/bad/badversion.j
.version 99999999999 0
.class public whocares
.super java/lang/Object
.end class
